--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,12 @@
 
 /* === */
 @import "debug";
+
+.clock-arrows {
+  opacity: 1;
+  stroke: red;
+}
+.clock-body {
+  fill: lightcyan;
+  stroke: lightgreen;
+}
