--- a/src/views/templates/index/template.twig
+++ b/src/views/templates/index/template.twig
@@ -2,6 +2,9 @@
 
 {% block page %}
     <span class="svg-icon" name="cloud-drizzle"></span>
+    <span class="svg-icon" name="cloud-drizzle"></span>
+    <span class="svg-icon" name="cloud-drizzle"></span>
+    <span class="svg-icon" name="icon_scheduled"></span>
     <span class="svg-icon" name="icon_scheduled"></span>
     <ul>
         {% for value in benefits %}
