--- a/src/views/layouts/base.twig
+++ b/src/views/layouts/base.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="layout__html">
 <head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -8,7 +8,7 @@
   <title>{{ title }}</title>
 
 </head>
-<body>
+<body class="layout__body">
 
   {% block header %}
     {% include "../templates/header.twig" %}
