--- a/src/views/pages/index/template.twig
+++ b/src/views/pages/index/template.twig
@@ -2,8 +2,8 @@
 
 {% block page %}
   <div class="container layout__container">
-    <article class="layout__main">
-      <h1>Главное</h1>
+    <section class="layout__main">
+      <h1 class="section__title">Главное</h1>
       <span class="svg-icon" name="cloud-drizzle"></span>
       <span class="svg-icon" name="cloud-drizzle"></span>
       <span class="svg-icon" name="cloud-drizzle"></span>
@@ -15,15 +15,30 @@
         {% endfor %}
       </ul>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
-    </article>
-    <article class="layout__actions">
-      <h1>Избранные сценарии</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
-    </article>
-    <article class="layout__devices">
-      <h1>Избранные устройства</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
-    </article>
+    </section>
+    <section class="layout__actions section">
+      <h1 class="section__title">Избранные сценарии</h1>
+      <div class="section__container">
+        <div class="card">1</div>
+        <div class="card">2</div>
+        <div class="card">3</div>
+        <div class="card">4</div>
+        <div class="card">5</div>
+        <div class="card">6</div>
+        <div class="card">7</div>
+        <div class="card">8</div>
+        <div class="card">9</div>
+        <div class="card">10</div>
+        <div class="card">11</div>
+        <div class="card">12</div>
+      </div>
+    </section>
+    <section class="layout__devices">
+      <h1 class="section__title">Избранные устройства</h1>
+      <div class="section__container">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
+      </div>
+    </section>
 
   </div>
 {% endblock %}
