--- a/src/styles/templates/section.scss
+++ b/src/styles/templates/section.scss
@@ -4,9 +4,35 @@
     font-size: 18px;
   }
   &__container {
+    overflow: auto;
+    height: 330px;
+  }
+  &__cards-grid {
+    // width: 1000px;
+    // margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 15px;
+    // grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    // grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    // grid-auto-columns: 200px;
+    grid-auto-flow: column;
+    counter-reset: div;
+    // overflow: auto;
+
+    > .card {
+      border: solid;
+      display: flex;
+      width: 200px;
+      // height: 100px;
+      // float: left;
+
+      &::before {
+        counter-increment: div;
+        content: counter(div);
+        margin: auto;
+        font-size: 40px;
+      }
+    }
   }
 }
-
