--- a/src/views/pages/index/template.twig
+++ b/src/views/pages/index/template.twig
@@ -14,23 +14,28 @@
           <li>{{ value }}</li>
         {% endfor %}
       </ul>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
     </section>
     <section class="layout__actions section">
       <h1 class="section__title">Избранные сценарии</h1>
       <div class="section__container">
-        <div class="card">1</div>
-        <div class="card">2</div>
-        <div class="card">3</div>
-        <div class="card">4</div>
-        <div class="card">5</div>
-        <div class="card">6</div>
-        <div class="card">7</div>
-        <div class="card">8</div>
-        <div class="card">9</div>
-        <div class="card">10</div>
-        <div class="card">11</div>
-        <div class="card">12</div>
+       <div class="section__cards-list">
+          <div class="card">1</div>
+          <div class="card">2</div>
+          <div class="card">3</div>
+          <div class="card">4</div>
+          <div class="card">5</div>
+          <div class="card">6</div>
+          <div class="card">7</div>
+          <div class="card">8</div>
+          <div class="card">9</div>
+          <div class="card">10</div>
+          <div class="card">11</div>
+          <div class="card">12</div>
+          <div class="card">13</div>
+          <div class="card">14</div>
+          <div class="card">15</div>
+        </div>
       </div>
     </section>
     <section class="layout__devices">
