--- a/src/styles/patterns.scss
+++ b/src/styles/patterns.scss
@@ -1,4 +1,6 @@
 @import "patterns/card";
+@import "patterns/cards-pager";
 @import "patterns/container";
+@import "patterns/main";
 @import "patterns/nav";
 
