--- a/src/views/pages/index/template.twig
+++ b/src/views/pages/index/template.twig
@@ -4,37 +4,45 @@
   <div class="container layout__container">
     <section class="layout__main">
       <h1 class="section__title">Главное</h1>
-      <span class="svg-icon" name="cloud-drizzle"></span>
-      <span class="svg-icon" name="cloud-drizzle"></span>
-      <span class="svg-icon" name="cloud-drizzle"></span>
-      <span class="svg-icon" name="icon_scheduled"></span>
-      <span class="svg-icon" name="icon_scheduled"></span>
-      <ul>
-        {% for value in benefits %}
-          <li>{{ value }}</li>
-        {% endfor %}
-      </ul>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
+      <div class="section__container main__container">
+        <span class="svg-icon" name="cloud-drizzle"></span>
+        <span class="svg-icon" name="cloud-drizzle"></span>
+        <span class="svg-icon" name="cloud-drizzle"></span>
+        <span class="svg-icon" name="icon_scheduled"></span>
+        <span class="svg-icon" name="icon_scheduled"></span>
+        <ul>
+          {% for value in benefits %}
+            <li>{{ value }}</li>
+          {% endfor %}
+        </ul>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aliquid est nemo possimus fugiat eaque autem, nihil ea iste, tempore asperiores dicta ullam nulla! Libero quod aspernatur reprehenderit sapiente accusamus!</p>
+      </div>
     </section>
     <section class="layout__actions section">
       <h1 class="section__title">Избранные сценарии</h1>
-      <div class="section__container">
-       <div class="section__cards-list">
-          <div class="card">1</div>
-          <div class="card">2</div>
-          <div class="card">3</div>
-          <div class="card">4</div>
-          <div class="card">5</div>
-          <div class="card">6</div>
-          <div class="card">7</div>
-          <div class="card">8</div>
-          <div class="card">9</div>
-          <div class="card">10</div>
-          <div class="card">11</div>
-          <div class="card">12</div>
-          <div class="card">13</div>
-          <div class="card">14</div>
-          <div class="card">15</div>
+      <div class="cards-pager__buttons-wrapper">
+        <button id="prev">&lt;</button>
+        <button id="next">&gt;</button>
+      </div>
+      <div class="section__container cards-pager__container">
+        <div class="cards-pager__wrapper">
+          <div class="cards-pager__page">
+            <div class="card">1</div>
+            <div class="card">2</div>
+            <div class="card">3</div>
+            <div class="card">4</div>
+            <div class="card">5</div>
+            <div class="card">6</div>
+            <div class="card">7</div>
+            <div class="card">8</div>
+            <div class="card">9</div>
+            <div class="card">10</div>
+            <div class="card">11</div>
+            <div class="card">12</div>
+            <div class="card">13</div>
+            <div class="card">14</div>
+            <div class="card">15</div>
+          </div>
         </div>
       </div>
     </section>
