--- a/src/styles/patterns.scss
+++ b/src/styles/patterns.scss
@@ -1,6 +1,9 @@
+@import "patterns/actions-pager";
 @import "patterns/card";
-@import "patterns/cards-pager";
 @import "patterns/container";
+@import "patterns/devices-pager";
+@import "patterns/footer";
+@import "patterns/header";
 @import "patterns/main";
 @import "patterns/nav";
-
+@import "patterns/section";
