--- a/src/styles/tokens/line-height.scss
+++ b/src/styles/tokens/line-height.scss
@@ -1,3 +1,4 @@
-$line-height-base:      16 / 14;
-$line-height-small:     14 / 12;
+$line-height-base:      20 / 16;
+$line-height-small:     16 / 14;
+$line-height-x-small:   14 / 12;
 $line-height-heading:   31 / 27;
