--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -21,7 +21,7 @@ select,
 textarea {
   font-family: inherit;
   font-size: inherit;
-  line-height: $line-height-small;
+  line-height: 16px;
   margin: 0;
 }
 
