--- a/src/styles/patterns.scss
+++ b/src/styles/patterns.scss
@@ -4,6 +4,7 @@
 @import "patterns/devices-pager";
 @import "patterns/footer";
 @import "patterns/header";
+@import "patterns/layout";
 @import "patterns/main";
 @import "patterns/nav";
 @import "patterns/section";
