--- a/src/styles/patterns/actions-pager.scss
+++ b/src/styles/patterns/actions-pager.scss
@@ -2,7 +2,11 @@
   &__container {
     overflow: hidden;
     width: 100%;
-    height: 330px;
+    // prevent of cut the box shadow
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: -5px;
+    margin-bottom: -5px;
   }
 
   &__wrapper {
