--- a/src/styles/patterns/devices-pager.scss
+++ b/src/styles/patterns/devices-pager.scss
@@ -3,7 +3,9 @@
     overflow: hidden;
     width: calc(100% + 40px);
     // width: 100%;
-    height: 120px;
+    // height: 120px;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 
   &__wrapper {
