--- a/src/styles/patterns/section.scss
+++ b/src/styles/patterns/section.scss
@@ -3,15 +3,17 @@
     display: grid;
     grid-template-rows: auto 1fr;
   }
+
   &__title {
-    margin: 0 0 20px 0;
+    margin: -2px 0 20px 0;
     font-size: 18px;
+    line-height: 21px;
   }
   &__container {
     .section.section--main & {
       background: transparent url('../images/bg@1x.png');
       background-size: cover;
-      border-radius: 30px;
+      border-radius: 20px;
 
       // https://www.w3.org/blog/CSS/2012/06/14/unprefix-webkit-device-pixel-ratio/
       @media (-webkit-min-device-pixel-ratio: 2), /* Webkit */
