--- a/src/styles/patterns/devices-pager.scss
+++ b/src/styles/patterns/devices-pager.scss
@@ -2,13 +2,12 @@
   &__container {
     overflow: hidden;
     width: calc(100% + 40px);
-    // width: 100%;
-    // height: 120px;
     padding-top: 5px;
     padding-bottom: 5px;
   }
 
   &__wrapper {
+    width: calc(100% - 40px);
     transition: transform 0.2s ease-in-out;
     display: grid;
     grid-template-columns: repeat(1000, 100%);
@@ -17,7 +16,6 @@
     grid-gap: 15px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
-    // grid-template-columns: repeat(1000, 200px);
     grid-template-rows: 120px;
     grid-auto-rows: 0;
   }
