--- a/src/styles/patterns.scss
+++ b/src/styles/patterns.scss
@@ -6,5 +6,6 @@
 @import "patterns/header";
 @import "patterns/layout";
 @import "patterns/main";
+@import "patterns/main-devices-pager";
 @import "patterns/nav";
 @import "patterns/section";
