--- a/src/styles/patterns/footer.scss
+++ b/src/styles/patterns/footer.scss
@@ -10,7 +10,7 @@
     display: flex;
   }
   &__nav-item {
-    margin: 0 1em 0 0;
+    margin: 0 16px 0 0;
   }
   &__copyright {
     margin-left: auto;
