Add popup animation

--- a/src/styles/patterns.scss
+++ b/src/styles/patterns.scss
@@ -8,4 +8,5 @@
 @import "patterns/main";
 @import "patterns/main-devices-pager";
 @import "patterns/nav";
+@import "patterns/popup";
 @import "patterns/section";
