--- a/src/views/patterns/card.twig
+++ b/src/views/patterns/card.twig
@@ -1,9 +1,23 @@
 {% macro card(data, type) %}
-  <div class="card  {{ 'card--'~type }} {{ data.isActive ? 'card--active' }}" id="card-{{ type }}-{{ data.id }}">
+  <input
+    type="checkbox"
+    class="popup__checkbox"
+    id="popup-checkbox-{{ type }}-{{ data.id }}"
+    data-card-id="card-{{ type }}-{{ data.id }}"
+  >
+  <label
+    class="card popup__container {{ 'card--'~type }} {{ data.isActive ? 'card--active' }}"
+    for="popup-checkbox-{{ type }}-{{ data.id }}"
+    id="card-{{ type }}-{{ data.id }}"
+  >
     <span class="svg-icon" name="icon_{{ data.icon }}"></span>
     <span class="card__title">{{ data.title }}</span>
     {% if (data.label is defined) %}
       <span class="card__label">{{ data.label }}</span>
     {% endif %}
-  </div>
+  </label>
+  <label
+    class="popup__fader"
+    for="popup-checkbox-{{ type }}-{{ data.id }}" role="presentation"
+  ></label>
 {% endmacro %}
