--- a/src/views/layouts/base.twig
+++ b/src/views/layouts/base.twig
@@ -22,5 +22,6 @@
     {% include "../templates/footer.twig" %}
   {% endblock %}
 
+  <script src="https://rawgit.com/GoogleChrome/flipjs/master/dist/flip.js"></script>
 </body>
 </html>
