--- a/src/styles/patterns/popup.scss
+++ b/src/styles/patterns/popup.scss
@@ -3,6 +3,7 @@
 
   &__checkbox {
     position: absolute;
+    display: none;
   }
 
   &__fader {
@@ -13,7 +14,7 @@
     transition-duration: .2s;
     z-index: 5;
 
-    /*#{$is-open} {
+    &.is-popup-open {
       pointer-events: auto;
       top: 0;
       right: 0;
@@ -21,14 +22,24 @@
       left: 0;
       background-color: rgb(51, 51, 51);
       opacity: .5;
-    }*/
+    }
   }
 
   &__container {
     z-index: 6;
-    // left: 50%;
-    // top: 50%;
-    transition: all 1s;
+    position: fixed;
+    width: 630px;
+    height: 238px;
+    // margin-left: -315px;
+    // margin-top: -119px;
+    background-color: red;
+    border-radius: 20px;
+    padding: 20px;
+    opacity: 0.8;
+    pointer-events: none;
+    left: 200px;
+    top: 200px;
+    // transition: all 1s;
 
     /*#{$is-open} {
       position: fixed;
@@ -37,5 +48,9 @@
       margin-left: -315px;
       margin-top: -119px;
     }*/
+
+    &.is-popup-open {
+      opacity: 1;
+    }
   }
 }
