+ Popup position + Popup content + Scale transform

--- a/src/styles/patterns/card.scss
+++ b/src/styles/patterns/card.scss
@@ -1,6 +1,6 @@
 .card {
   $color-bg: #F7F7F7;
-  $color-bg-hover: $white;
+  $color-bg-hover: #fff;
   $color-label: #858585;
   cursor: pointer;
   transition-property: background-color, box-shadow;
