--- a/src/views/templates/popup.twig
+++ b/src/views/templates/popup.twig
@@ -6,5 +6,10 @@
   role="dialog"
   class="popup__container"
 >
-  <p>Lorem ipsum dolor sit amet</p>
+  <div class="popup__body">
+    <h1 class="popup__title">Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam doloribus error, exercitationem fugit in ipsam magnam maiores sapiente sed sint! Consequuntur ducimus ea eveniet ex excepturi officiis quasi quis totam.</p>
+  </div>
+  <button class="popup__button popup__button--primary">Применить</button>
+  <button class="popup__button popup__button--secondary">Закрыть</button>
 </div>
