--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,2 @@
 $font-family-text: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-$popup-animation-duration: .4s;
+$popup-animation-duration: 1.4s;
